--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask
-pandas
-matplotlib
-statsmodels
+Flask==2.3.3
+pandas==1.5.3
+matplotlib==3.7.1
+statsmodels==0.13.5
 plotly
 prophet
+numpy==1.23.5
